awx/step1_create_awx/awx.tf
provider "aws" {
  region = var.region
}

resource "aws_instance" "awx" {
  instance_type               = var.instance_type
  ami                         = var.ami
  key_name                    = var.key_name
  associate_public_ip_address = "true"
  security_groups             = ["allow_ssh_and_awx"]

  #move it from local to remote 
  provisioner "file" {
    source      = "awx"
    destination = "/tmp/"

    connection {
      host        = self.public_ip
      type        = "ssh"
      user        = var.user
      private_key = file(var.ssh_key_location)
    }
  }

  provisioner "remote-exec" {
    connection {
      host        = self.public_ip
      type        = "ssh"
      user        = var.user
      private_key = file(var.ssh_key_location)
    }

    inline = [
      "sudo yum install -y epel-release",
      "sudo yum install -y yum-utils device-mapper-persistent-data lvm2 ansible git python-devel python-pip python-docker-py vim-enhanced ",
      "sudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo",
      "sudo yum install  docker-ce -y",
      "sudo systemctl start docker",
      "sudo systemctl enable docker",
      "sudo pip uninstall docker docker-py docker-compose",
      "sudo pip install docker-compose==1.9",
      "sudo ansible-playbook -i /tmp/awx/installer/inventory /tmp/awx/installer/install.yml -vv",
    ]
  }
}
